--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nexxel.dev",
+  "name": "tobiade.xyz",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,19 +13,19 @@
     "@upstash/redis": "^1.34.3",
     "babel-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
     "lucide-react": "^0.456.0",
-    "next": "15.0.3",
+    "next": "^15.5.4",
     "next-mdx-remote": "^5.0.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "shiki": "^1.22.2",
     "use-scramble": "^2.2.15"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
